complete implementation of number receiver module (unit tests and logic) without integration