@@ -1,59 +1,68 @@
 package pl.lotto.domain.numberreceiver;
 
-
-/*
-*
-*
-*
-* klient podaje 6 liczb
-liczby muszą być w zakresie od 1-99
-liczby nie mogą się powtarzać
-klient dostaje informacje o dacie losowanie
-klient dostaje informacje o swoim unikalnym identyfikatorze losowanie
-
-*
-* */
-
 import lombok.AllArgsConstructor;
-import pl.lotto.domain.numberreceiver.dto.InputNumberResultDto;
+import pl.lotto.domain.numberreceiver.dto.NumberReceiverResponseDto;
 import pl.lotto.domain.numberreceiver.dto.TicketDto;
 
-import java.time.Clock;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.UUID;
+import java.util.stream.Collectors;
+
+import static pl.lotto.domain.numberreceiver.ValidationResult.INPUT_SUCCESS;
 
 @AllArgsConstructor
 public class NumberReceiverFacade {
 
-    private final NumberValidator validator;
-    private final NumberReceiverRepository repository;
-    private final Clock clock;
+    private NumberValidator numberValidator;
+    private TicketRepository ticketRepository;
+    private DrawDateGenerator drawDateGenerator;
+    private HashGenerable hashGenerator;
 
-    public InputNumberResultDto inputNumbers(Set<Integer> numbersFromUser) {
-        boolean areAllNumbersInRange = validator.areAllNumbersInRange(numbersFromUser);
-        if (areAllNumbersInRange) {
-            String ticketId = UUID.randomUUID().toString();
-            LocalDateTime drawDate = LocalDateTime.now(clock);
-            Ticket savedTicket = repository.save(new Ticket(ticketId, drawDate, numbersFromUser));
-            return InputNumberResultDto.builder()
-                    .drawDate(savedTicket.drawDate())
-                    .ticketId(savedTicket.ticketId())
-                    .numbersFromUser(numbersFromUser)
-                    .message("success")
-                    .build();
+    public NumberReceiverResponseDto inputNumbers(Set<Integer> numbersFromUsers) {
+        List<ValidationResult> validationResultList = numberValidator.validate(numbersFromUsers);
+        if (!validationResultList.isEmpty()) {
+            String resultMessage = numberValidator.createResultMessage();
+            return new NumberReceiverResponseDto(null, resultMessage);
         }
-        return InputNumberResultDto.builder()
-                .message("failed")
+        LocalDateTime drawDate = drawDateGenerator.getNextDrawDate();
+        String hash = hashGenerator.getHash();
+
+        TicketDto generatedTicket = TicketDto.builder()
+                .hash(hash)
+                .numbersFromUser(numbersFromUsers)
+                .drawDate(drawDate)
                 .build();
+
+        Ticket savedTicket = TicketMapper.mapFromTicketDtoToTicket(generatedTicket);
+        ticketRepository.save(savedTicket);
+        return new NumberReceiverResponseDto(generatedTicket, INPUT_SUCCESS.message);
     }
 
-    public List<TicketDto> userNumbers(LocalDateTime date) {
-        List<Ticket> allTicketsByDrawDate = repository.findAllTicketsByDrawDate(date);
-        return allTicketsByDrawDate
+    public List<TicketDto> retrieveAllTicketsByNextDrawDate() {
+        LocalDateTime nextDrawDate = retrieveNextDrawDate();
+        return retrieveAllTicketsByDrawDate(nextDrawDate);
+    }
+
+    public List<TicketDto> retrieveAllTicketsByDrawDate(LocalDateTime date) {
+        LocalDateTime nextDrawDate = retrieveNextDrawDate();
+        if (date.isAfter(nextDrawDate)) {
+            return Collections.emptyList();
+        }
+        return ticketRepository.findAllTicketsByDrawDate(date)
                 .stream()
-                .map(TicketMapper::mapFromTicket)
-                .toList();
+                .filter(ticket -> ticket.drawDate().isEqual(date))
+                .map(TicketMapper::mapFromTicketToTicketDto)
+                .collect(Collectors.toList());
+    }
+
+    public LocalDateTime retrieveNextDrawDate() {
+        return drawDateGenerator.getNextDrawDate();
+    }
+
+    public TicketDto findByHash(String hash) {
+        Ticket ticket = ticketRepository.findByHash(hash);
+        return TicketMapper.mapFromTicketToTicketDto(ticket);
     }
 }
